TA-3828 corrected results spacing

--- a/src/client/components/pages/office-lookup-page/office-lookup-page.scss
+++ b/src/client/components/pages/office-lookup-page/office-lookup-page.scss
@@ -102,7 +102,7 @@
 }
 
 .resultContainer {
-  min-width: 321px;
+  width: 100%;
   @include grid-media($sba-grid-large) {
     position: absolute;
     pointer-events: all;
